<resources>
    <string name="app_name">The Metropolitan</string>

    <!--Names for Nav Drawer -->
    <string name="nav_darktheme">Dark Theme</string>
    <string name="nav_news">News</string>
    <string name="nav_opinion">Opinion</string>
    <string name="nav_studentlife">Student Life</string>
    <string name="nav_arts">Arts</string>
    <string name="nav_tech">Tech</string>
    <string name="nav_support">Support</string>
    <string name="nav_appteam">App Team</string>
    <string name="nav_category">Categories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="blank"> </string>
    <string name="search_title">Search</string>
    <string name="Clear_title">Clear</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="search_page">Search</string>
    <string name="saved_page">Saved</string>
    <string name="settings_page">Settings</string>
    <string name="news_page">News</string>
    <string name="channel_name">New_Articles</string>
    <string name="channel_description">When new articles are published</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="title_activity_article">Article</string>
    <string name="local_service_started">local service started</string>
    <string name="local_service_label">test service</string>

</resources>
