<?xml version="1.0" encoding="utf-8"?>
<!--WAS USED FOR THE NAV DRAWER-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/nav_category">
        <menu>
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/news"
                android:title="@string/nav_news" />

            <item
                android:id="@+id/nav_opinion"
                android:icon="@drawable/opinion"
                android:title="@string/nav_opinion" />

            <item
                android:id="@+id/nav_studentlife"
                android:icon="@drawable/studentlife"
                android:title="@string/nav_studentlife" />

            <item
                android:id="@+id/nav_arts"
                android:icon="@drawable/arts"
                android:title="@string/nav_arts" />

            <item
                android:id="@+id/nav_tech"
                android:icon="@drawable/tech"
                android:title="@string/nav_tech" />
        </menu>
    </item>

    <group>
        <item
            android:id="@+id/nav_darktheme"
            android:icon="@drawable/darktheme"
            android:title="@string/nav_darktheme"
            app:actionLayout="@layout/nav_darktheme_switch"
            />
    </group>

    <group>
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support"
            android:title="@string/nav_support"
            />

        <item
            android:id="@+id/nav_appteam"
            android:icon="@drawable/appteam"
            android:title="@string/nav_appteam"
            />
    </group>

</menu>