<?xml version="1.0" encoding="utf-8"?>
<!--Menu items used in the bottom nav bar-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--Menu resource file for the bottom navigation-->
    <!--This currently has 4 items; icons subject to further changes-->
    <item
        android:id="@+id/bottom_news"
        android:icon="@drawable/news1"
        android:title="@string/news_page" />

    <item
        android:id="@+id/bottom_search"
        android:icon="@drawable/search"
        android:title="@string/search_page" />

    <item
        android:id="@+id/bottom_saved"
        android:icon="@drawable/saved"
        android:title="@string/saved_page" />

    <item
        android:id="@+id/bottom_settings"
        android:icon="@drawable/settings1"
        android:title="@string/settings_page" />

</menu>